# instrumented

./: .gitlab-ci.yml  Cargo.toml  Dockerfile.builder  LICENSE  README.md
.dependabot/: config.yml
.github/: dependabot.yml
core/codegen/: Cargo.toml
core/codegen/src/: lib.rs
core/lib/: Cargo.toml
core/lib/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
