[package]
name = "instrumented-codegen"
version = "0.1.3"
authors = ["Brenden Matthews <brenden@diddyinc.com>"]
edition = "2018"
license = "MIT"
description = "Codegen lib for instrumented crate"
repository = "https://github.com/umpyre-code/instrumented"
readme = "../../README.md"
categories = ["development-tools", "development-tools::debugging", "development-tools::profiling", "development-tools::testing"]
keywords = ["instrument", "metrics", "monitoring", "instrumentation"]

[dependencies]
darling = "0.12"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[lib]
proc-macro = true

[dev-dependencies]
instrumented = "0.1"
log = "0.4"
