[package]
name = "instrumented"
version = "0.1.0"
authors = ["Brenden Matthews <brenden@diddyinc.com>"]
edition = "2018"

[dependencies]
hyper = "0.12"
instrumented-codegen = { path = "../codegen" }
lazy_static = "1.0"
log = "0.4"
prometheus = { version = "0.7", features = ["nightly", "process"]}
tokio = "0.1"
