[package]
name = "instrumented"
version = "0.1.3"
authors = ["Brenden Matthews <brenden@diddyinc.com>"]
edition = "2018"
license = "MIT"
description = "instrument your code"
repository = "https://github.com/umpyre-code/instrumented"
readme = "../../README.md"
categories = ["development-tools", "development-tools::debugging", "development-tools::profiling", "development-tools::testing"]
keywords = ["instrument", "metrics", "monitoring", "instrumentation"]

[dependencies]
hyper = "0.12"
instrumented-codegen = "0.1"
lazy_static = "1.0"
log = "0.4"
prometheus = { version = "0.7", features = ["nightly", "process"]}
tokio = "1.5"

[dev-dependencies]
reqwest = "0.9"
